--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,31 @@
 *{
   font-family: "Sapace Grotesk", sans-serif;
 }
+
+.front-card{
+  background: url('./images/bg-card-front.png') no-repeat center/cover;
+  /*background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;*/
+  height: 200px;
+  width: 320px;
+  border-radius: 10px;
+}
+
+.back-card{
+  background: url('./images/bg-card-back.png') no-repeat center/cover;
+  /*background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;*/
+  height: 200px;
+  width: 320px;
+  border-radius: 10px;
+}
+
+@media (min-width: 1024px){
+  .front-card, .back-card{
+    height: 300px;
+    width: 500px;
+    border-radius: 20px;
+  }
+}
